@@ -4,7 +4,9 @@
 
 	* Makefile: (Documentation): new.
 
-	* epackage.el (epackage--root-directory): Adjust documentation
+	* epackage.el
+	(top level); Minor documetation changes in comments.
+	(epackage--root-directory): Adjust documentation
 	and handling of `user-emacs-directory'.
 
 2019-05-05 Sun  Jari Aalto  <jari.aalto@cante.net>
